add_executable(fin_program main.c
launch.c
        ../include/main.h
        ../include/basic.h
        ../include/launch.h
        ../include/color.h
        ../include/audio.h
        ../include/display.h
        display.c
        audio.c
        event.c
        ../include/event.h
        game.c
        ../include/game.h
)